force-app/main/default/objects/Case/fields/AccountCheckBankruptcyCompany__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckBankruptcyCompany__c</fullName>
    <label>Account Check Bankruptcy (Company)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>