force-app/main/default/objects/Case/fields/AccountCheckBankruptcyDirector__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckBankruptcyDirector__c</fullName>
    <label>Account Check Bankruptcy (Director)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>