force-app/main/default/objects/Case/fields/AccountCheckCentralRegulator__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckCentralRegulator__c</fullName>
    <label>Account Check Central Regulator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>