force-app/main/default/objects/Case/fields/AccountCheckConditionChainHead__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckConditionChainHead__c</fullName>
    <label>Account Check Condition Chain Head</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>