force-app/main/default/objects/Case/fields/AccountCheckDuplicate__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckDuplicate__c</fullName>
    <label>Account Check Duplicate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>