force-app/main/default/objects/Case/fields/AccountCheckILNo__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckILNo__c</fullName>
    <label>Account Check IL No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>