force-app/main/default/objects/Case/fields/AccountCheckInvoiceReceipient__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckInvoiceReceipient__c</fullName>
    <label>Account Check Invoice Receipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>