force-app/main/default/objects/Case/fields/AccountCheckLegalForm__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckLegalForm__c</fullName>
    <label>Account Check Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>