force-app/main/default/objects/Case/fields/AccountCheckMemberNumnber__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckMemberNumnber__c</fullName>
    <label>Account Check Member Numnber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>