force-app/main/default/objects/Case/fields/AccountCheckPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckPrimaryContact__c</fullName>
    <label>Account Check Primary Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>