force-app/main/default/objects/Case/fields/AccountCheckRootAccount__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckRootAccount__c</fullName>
    <label>Account Check Root Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>