force-app/main/default/objects/Case/fields/AccountCheckSanction__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckSanction__c</fullName>
    <label>Account Check Sanction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>