force-app/main/default/objects/Case/fields/AccountCheckShipToParty__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckShipToParty__c</fullName>
    <label>Account Check Ship To Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>