force-app/main/default/objects/Case/fields/AccountCheckSoldToParty__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckSoldToParty__c</fullName>
    <label>Account Check Sold To Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>