force-app/main/default/objects/Case/fields/AccountCheckStatisticChainHead__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckStatisticChainHead__c</fullName>
    <label>Account Check Statistic Chain Head</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>