force-app/main/default/objects/Case/fields/AccountCheckStatisticChainParent__c.field-meta.xml
<CustomField>
    <fullName>AccountCheckStatisticChainParent__c</fullName>
    <label>Account Check Statistic Chain Parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>