force-app/main/default/objects/Case/fields/AccountERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountERPCustomerNumber__c</fullName>
    <formula>Account.ERPCustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ERP Customer Number</label>
    <type>Text</type>
</CustomField>