force-app/main/default/objects/Case/fields/AccountShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>AccountShippingAddress__c</fullName>
    <formula>IF(Account.ShippingStreet &lt;&gt; &apos;&apos;, Account.ShippingStreet + BR(), &apos;&apos;) &amp;
IF(Account.ShippingPostalCode &lt;&gt; &apos;&apos;, Account.ShippingPostalCode + &apos; &apos; + IF(Account.ShippingCity &lt;&gt; &apos;&apos;, Account.ShippingCity, &apos;&apos;) + BR(), IF(Account.ShippingCity &lt;&gt; &apos;&apos;, Account.ShippingCity + BR(), &apos;&apos;)) &amp;
Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping Address</label>
    <type>Text</type>
</CustomField>