force-app/main/default/objects/Case/fields/CaseAge__c.field-meta.xml
<CustomField>
    <fullName>CaseAge__c</fullName>
    <formula>BLANKVALUE(
IF(
OR(ISBLANK(CreatedDate), ISBLANK(ClosedDate)),
TODAY() - DATEVALUE(CreatedDate),
DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate)
),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>