force-app/main/default/objects/Case/fields/CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>CaseOwner__c</fullName>
    <formula>Owner:Queue.QueueName &amp; Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>