force-app/main/default/objects/Case/fields/CaseOwnerHelper__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerHelper__c</fullName>
    <formula>Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Helper</label>
    <type>Text</type>
</CustomField>