force-app/main/default/objects/Case/fields/Closed_by_User__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_User__c</fullName>
    <label>Closed by User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>