force-app/main/default/objects/Case/fields/DebitorNumber__c.field-meta.xml
<CustomField>
    <fullName>DebitorNumber__c</fullName>
    <label>Debitor Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>