force-app/main/default/objects/Case/fields/ExistingInitialEquipment__c.field-meta.xml
<CustomField>
    <fullName>ExistingInitialEquipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Initial Equipment</label>
    <type>Checkbox</type>
</CustomField>