force-app/main/default/objects/Case/fields/FirstInboundEmail__c.field-meta.xml
<CustomField>
    <fullName>FirstInboundEmail__c</fullName>
    <label>First Inbound Email</label>
    <type>DateTime</type>
</CustomField>