force-app/main/default/objects/Case/fields/FirstOutboundEmail__c.field-meta.xml
<CustomField>
    <fullName>FirstOutboundEmail__c</fullName>
    <label>First Outbound Email</label>
    <type>DateTime</type>
</CustomField>