force-app/main/default/objects/Case/fields/Has_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Attachment</label>
    <type>Checkbox</type>
</CustomField>