force-app/main/default/objects/Case/fields/isMP3__c.field-meta.xml
<CustomField>
    <fullName>isMP3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMP3</label>
    <type>Checkbox</type>
</CustomField>