force-app/main/default/objects/Case/fields/isPDF__c.field-meta.xml
<CustomField>
    <fullName>isPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPDF</label>
    <type>Checkbox</type>
</CustomField>