force-app/main/default/objects/Case/fields/LastInboundEmail__c.field-meta.xml
<CustomField>
    <fullName>LastInboundEmail__c</fullName>
    <label>Last Inbound Email</label>
    <type>DateTime</type>
</CustomField>