force-app/main/default/objects/Case/fields/LastOutboundEmail__c.field-meta.xml
<CustomField>
    <fullName>LastOutboundEmail__c</fullName>
    <label>Last Outbound Email</label>
    <type>DateTime</type>
</CustomField>