force-app/main/default/objects/Case/fields/MasterDataCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>MasterDataCheckStatus__c</fullName>
    <label>Master Data Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Pass with update</fullName>
            </value>
            <value>
                <fullName>Fail (Blocker)</fullName>
            </value>
            <value>
                <fullName>Fail (Condition)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>