force-app/main/default/objects/Case/fields/NotificationOnCreator__c.field-meta.xml
<CustomField>
    <fullName>NotificationOnCreator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Cases created through the Flow, a notification should be sent to the user when the Case is closed.</description>
    <label>Notification on Creator</label>
    <type>Checkbox</type>
</CustomField>