force-app/main/default/objects/Case/fields/PostalCodeWeb2Case__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeWeb2Case__c</fullName>
    <label>Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>