force-app/main/default/objects/Case/fields/ReturnOrder__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>