force-app/main/default/objects/Case/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Answering Machine</fullName>
            </value>
            <value>
                <fullName>Create access</fullName>
            </value>
            <value>
                <fullName>Delivery inquiries</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Foreign object</fullName>
            </value>
            <value>
                <fullName>Handel</fullName>
            </value>
            <value>
                <fullName>Image database</fullName>
            </value>
            <value>
                <fullName>JJD error</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>Machine</fullName>
            </value>
            <value>
                <fullName>Machine replacement</fullName>
            </value>
            <value>
                <fullName>Machine RG/foreign object</fullName>
            </value>
            <value>
                <fullName>Maintain article pre-assignment</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Master data changes</fullName>
            </value>
            <value>
                <fullName>Master data - Company name change</fullName>
            </value>
            <value>
                <fullName>Master data - Price</fullName>
            </value>
            <value>
                <fullName>Master data transfer</fullName>
            </value>
            <value>
                <fullName>New Customer Setup</fullName>
            </value>
            <value>
                <fullName>No message/message under 8 seconds</fullName>
            </value>
            <value>
                <fullName>Order - Customer</fullName>
            </value>
            <value>
                <fullName>Order - Field service</fullName>
            </value>
            <value>
                <fullName>Order - Webshop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out-of-house service</fullName>
            </value>
            <value>
                <fullName>Outside of the house</fullName>
            </value>
            <value>
                <fullName>QS - Foreign Body</fullName>
            </value>
            <value>
                <fullName>QS-Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>