force-app/main/default/objects/Case/recordTypes/Complaint_Case.recordType-meta.xml
<RecordType>
    <fullName>Complaint_Case</fullName>
    <active>true</active>
    <businessProcess>ZKS Cases</businessProcess>
    <label>Reklamation</label>
</RecordType>