force-app/main/default/objects/Case/recordTypes/MasterData_Case.recordType-meta.xml
<RecordType>
    <fullName>MasterData_Case</fullName>
    <active>true</active>
    <businessProcess>ZKS Cases</businessProcess>
    <label>MasterData Case</label>
</RecordType>