force-app/main/default/objects/Case/recordTypes/Order_Cases.recordType-meta.xml
<RecordType>
    <fullName>Order_Cases</fullName>
    <active>true</active>
    <businessProcess>ZKS Cases</businessProcess>
    <label>Order Cases</label>
</RecordType>