force-app/main/default/objects/Case/recordTypes/ZKS_Cases.recordType-meta.xml
<RecordType>
    <fullName>ZKS_Cases</fullName>
    <active>true</active>
    <businessProcess>ZKS Cases</businessProcess>
    <label>ZKS Cases</label>
</RecordType>