force-app/main/default/objects/Case/listViews/Allgemeine_Anfragen_Case.listView-meta.xml
<ListView>
    <fullName>Allgemeine_Anfragen_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Allgemeine Anfragen</label>
    <queue>General_Inquiries</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>