force-app/main/default/objects/Case/listViews/Angebote_Case.listView-meta.xml
<ListView>
    <fullName>Angebote_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Angebote</label>
    <queue>Offers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>