force-app/main/default/objects/Case/listViews/Bestellungen_Case.listView-meta.xml
<ListView>
    <fullName>Bestellungen_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Bestellungen</label>
    <queue>Orders</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>