force-app/main/default/objects/Case/listViews/E_Commerce_Case.listView-meta.xml
<ListView>
    <fullName>E_Commerce_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>E-Commerce</label>
    <queue>E_Commerce</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>