force-app/main/default/objects/Case/listViews/Endkundenanfragen_Case.listView-meta.xml
<ListView>
    <fullName>Endkundenanfragen_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Endkundenanfragen</label>
    <queue>End_Customer_Inquiry</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>