force-app/main/default/objects/Case/listViews/JJD_Non_Routable_Case.listView-meta.xml
<ListView>
    <fullName>JJD_Non_Routable_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>JJD Non Routable</label>
    <queue>JJD_Non_Routable</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>