force-app/main/default/objects/Case/listViews/JJD_Support_Case.listView-meta.xml
<ListView>
    <fullName>JJD_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>JJD Support</label>
    <queue>JJD_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>