force-app/main/default/objects/Case/listViews/Logistik_Case.listView-meta.xml
<ListView>
    <fullName>Logistik_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Logistik</label>
    <queue>Logistics</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>