force-app/main/default/objects/Case/listViews/MasterDataWebshop_Case.listView-meta.xml
<ListView>
    <fullName>MasterDataWebshop_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Master Data - Webshop</label>
    <queue>MasterDataWebshop</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>