force-app/main/default/objects/Case/listViews/Reklamation_Case.listView-meta.xml
<ListView>
    <fullName>Reklamation_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Reklamationen</label>
    <queue>Complaints</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>