force-app/main/default/objects/Case/listViews/Stammdaten_Case.listView-meta.xml
<ListView>
    <fullName>Stammdaten_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Stammdaten</label>
    <queue>MasterData</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>