force-app/main/default/objects/Case/listViews/Webshop_Case.listView-meta.xml
<ListView>
    <fullName>Webshop_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Webshop</label>
    <queue>Webshop</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>